[gd_scene load_steps=4 format=3 uid="uid://dix47pa7pxb0n"]

[ext_resource type="Script" path="res://DialogOptions.gd" id="1_246hf"]
[ext_resource type="Texture2D" uid="uid://8joma6ftgyhh" path="res://Assets/GUI/medium.png" id="2_8gvsh"]
[ext_resource type="PackedScene" uid="uid://cmuxmq1g41mw1" path="res://jenkins.tscn" id="3_075eb"]

[node name="DialogOptions" type="Node2D"]
script = ExtResource("1_246hf")

[node name="Fader" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.40)

[node name="Medium" type="Sprite2D" parent="."]
position = Vector2(980.11, 699.18)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_8gvsh")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 656.01
offset_top = 557.46
offset_right = 696.01
offset_bottom = 737.46
theme_override_constants/v_separation = 90

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Control"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_type_variation = &"TriangleButton"

[node name="Label" type="Label" parent="GridContainer/Control"]
layout_mode = 0
offset_left = 98.89
offset_top = 2.46
offset_right = 628.89
offset_bottom = 92.46
text = "Uhhh yeah. How could you do this? Let's get this show on the road!"
vertical_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Control2"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_type_variation = &"TriangleButton"

[node name="Label" type="Label" parent="GridContainer/Control2"]
layout_mode = 0
offset_left = 98.89
offset_top = 2.46
offset_right = 628.89
offset_bottom = 92.46
text = "Uhhh yeah. How could you do this? Let's get this show on the road!"
vertical_alignment = 1
autowrap_mode = 2

[node name="Control3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Control3"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_type_variation = &"TriangleButton"

[node name="Label" type="Label" parent="GridContainer/Control3"]
layout_mode = 0
offset_left = 98.89
offset_top = 2.46
offset_right = 628.89
offset_bottom = 92.46
text = "Uhhh yeah. How could you do this? Let's get this show on the road!"
vertical_alignment = 1
autowrap_mode = 2

[node name="Jenkins" parent="." instance=ExtResource("3_075eb")]
position = Vector2(831.64, 258.93)
